adding some changes in input nunber feild

--- a/style.css
+++ b/style.css
@@ -130,6 +130,20 @@ td {
     display: none;
 }
 
+input[type="number"] {
+    -moz-appearance: textfield;
+}
+
+input[type="number"]::-webkit-inner-spin-button,
+input[type="number"]::-webkit-outer-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+
+input[type="number"] {
+    appearance: textfield;
+}
+
 @media (max-width: 768px) {
     .container {
         flex-direction: column-reverse; 
