--- a/style.css
+++ b/style.css
@@ -43,7 +43,10 @@ body {
 
 .left h2 {
     margin-bottom: 20px;
-    color: #333;
+    color: #f0e4e4;
+    display: inline-block;
+    margin: auto;
+    
 }
 
 .left form{
@@ -175,12 +178,19 @@ input[type="number"] {
     }
 
     .left form button {
-        margin-top: 15px;
-        padding: 12px;
-        font-size: 14px;
-        margin-left: 0;
-        margin-bottom: 10px;
-       
+        width: 50%;
+        padding: 20px;
+        margin:10px auto;
+        background-color: #62aae4;
+        border: none;
+        border-radius: 5px;
+        color: white;
+        font-size: 16px;
+        cursor: pointer;
+    }
+    
+    .left form button:hover {
+        background-color: #28846a;
     }
 
     .left form input {
